aichat/TODO
   Compiling sysctl v0.5.5
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `sys`
  --> /scratch/wip/aichat/work/vendor/sysctl-0.5.5/src/lib.rs:77:9
   |
77 | pub use sys::ctl::*;
   |         ^^^ use of unresolved module or unlinked crate `sys`
   |
note: found an item that was configured out
  --> /scratch/wip/aichat/work/vendor/sysctl-0.5.5/src/lib.rs:55:5
   |
55 | mod sys;
   |     ^^^
note: the item is gated here
  --> /scratch/wip/aichat/work/vendor/sysctl-0.5.5/src/lib.rs:53:1
   |
53 | #[cfg(any(target_os = "android", target_os = "linux"))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: found an item that was configured out
  --> /scratch/wip/aichat/work/vendor/sysctl-0.5.5/src/lib.rs:59:5
   |
59 | mod sys;
   |     ^^^
note: the item is gated here
  --> /scratch/wip/aichat/work/vendor/sysctl-0.5.5/src/lib.rs:57:1
   |
57 | #[cfg(any(target_os = "macos", target_os = "ios", target_os = "freebsd"))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: if you wanted to use a crate named `sys`, use `cargo add sys` to add it to your `Cargo.toml` and import it in your code
   |
43 + extern crate sys;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `sys`
  --> /scratch/wip/aichat/work/vendor/sysctl-0.5.5/src/lib.rs:78:9
   |
78 | pub use sys::ctl_iter::*;
   |         ^^^ use of unresolved module or unlinked crate `sys`
   |
note: found an item that was configured out
  --> /scratch/wip/aichat/work/vendor/sysctl-0.5.5/src/lib.rs:55:5
   |
55 | mod sys;
   |     ^^^
note: the item is gated here
  --> /scratch/wip/aichat/work/vendor/sysctl-0.5.5/src/lib.rs:53:1
   |
53 | #[cfg(any(target_os = "android", target_os = "linux"))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: found an item that was configured out
  --> /scratch/wip/aichat/work/vendor/sysctl-0.5.5/src/lib.rs:59:5
   |
59 | mod sys;
   |     ^^^
note: the item is gated here
  --> /scratch/wip/aichat/work/vendor/sysctl-0.5.5/src/lib.rs:57:1
   |
57 | #[cfg(any(target_os = "macos", target_os = "ios", target_os = "freebsd"))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: if you wanted to use a crate named `sys`, use `cargo add sys` to add it to your `Cargo.toml` and import it in your code
   |
43 + extern crate sys;
   |

error[E0432]: unresolved imports `sys::ctl::*`, `sys::ctl_iter::*`
  --> /scratch/wip/aichat/work/vendor/sysctl-0.5.5/src/lib.rs:77:9
   |
77 | pub use sys::ctl::*;
   |         ^^^^^^^^^^^
78 | pub use sys::ctl_iter::*;
   |         ^^^^^^^^^^^^^^^^

   Compiling h2 v0.4.11
Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
error: could not compile `sysctl` (lib) due to 3 previous errors
warning: build failed, waiting for other jobs to finish...
